working before 180 change

--- a/Tack!/Info.plist
+++ b/Tack!/Info.plist
@@ -55,6 +55,12 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location is used for Time / Distance to line and speed</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>digital-7.ttf</string>
+	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
